# AlphaPEM

./: .gitignore  404.html  CondaPkg.toml  GUI.py  Manifest.toml  Project.toml  README.md  __init__.py  demo.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  readthedocs.yaml  repro_undefvar.jl  requirements.txt  run_web_app.jl  search.html
.CondaPkg/: meta  pixi.toml
.github/workflows/: docs.yml
about/: index.html
calibration/: LICENSE-MIT  experimental_values.py  job.sh  parameter_calibration.py  parameter_calibration_local.py  parameter_calibration_ongoing.pkl  run.sh
configuration/: current_densities.py  derivative_current_densities.py  settings.py
docs/: JIT_OPTIMIZATION_GUIDE.md  Manifest.toml  Project.toml  about.md  index.md  make.jl
docs/functions/: GUI.md  demo.md  main.md
docs/functions/calibration/: experimental_values.md  parameter_calibration.md  parameter_calibration_local.md
docs/functions/configuration/: current_densities.md  settings.md
docs/functions/model/: AlphaPEM.md  auxiliaries.md  cell_voltage.md  control.md  dif_eq.md  flows.md  heat_transfer.md
docs/functions/modules/: GUI_modules.md  auxiliaries_modules.md  calibration_modules.md  demo_modules.md  dif_eq_modules.md  display_modules.md  flows_modules.md  heat_modules.md  main_modules.md  plotting_modules.md  settings_modules.md  transitory_functions.md
docs/src/: index.md
docs/src/about/: publications.md  roadmap.md
docs/src/advanced/: calibration.md  validity_analysis.md
docs/src/getting_started/: installation.md  quickstart.md
docs/src/user_guide/: cli_usage.md  web_interface.md
examples/: benchmark_step.jl  plot_currents.jl  profile_step.jl  run_EIS.jl  run_EIS_fast.jl  run_calibration.jl  run_parameter_validity.jl  run_polarization.jl  run_polarization_for_cali.jl  run_step.jl
functions/GUI/: index.html
functions/calibration/experimental_values/: index.html
functions/calibration/parameter_calibration/: index.html
functions/configuration/current_densities/: index.html
functions/configuration/settings/: index.html
functions/main/: index.html
functions/model/AlphaPEM/: index.html
functions/model/auxiliaries/: index.html
functions/model/cell_voltage/: index.html
functions/model/control/: index.html
functions/model/dif_eq/: index.html
functions/model/flows/: index.html
functions/model/heat_transfer/: index.html
functions/modules/GUI_modules/: index.html
functions/modules/auxiliaries_modules/: index.html
functions/modules/calibration_modules/: index.html
functions/modules/dif_eq_modules/: index.html
functions/modules/display_modules/: index.html
functions/modules/flows_modules/: index.html
functions/modules/heat_modules/: index.html
functions/modules/main_modules/: index.html
functions/modules/settings_modules/: index.html
model/: AlphaPEM.py  __init__.py  auxiliaries.py  cell_voltage.py  control.py  dif_eq.py  dif_eq_1D_GC_manifold.py  dif_eq_1D_MEA.py  dif_eq_GC_manifold.py  dif_eq_MEA.py  dif_eq_auxiliaries.py  flows.py  flows_1D_GC_manifold.py  flows_1D_MEA.py  heat_transfer.py  velocity.py
modules/: GUI_modules.py  auxiliaries_modules.py  calibration_modules.py  demo_modules.py  dif_eq_modules.py  display_modules.py  flow_1D_GC_manifold_modules.py  flows_1D_MEA_modules.py  flows_modules.py  heat_modules.py  main_modules.py  settings_modules.py  transitory_functions.py
scripts/: README.md  run_calibration_cluster.sh
search/: search_index.json
src/: AlphaPEM.jl
src/alphapem/: __init__.py
src/alphapem/application/: Application.jl  (+5 more)
test/: benchmark_eis.jl  benchmark_nb_gc.jl  benchmark_pola.jl  benchmark_step.jl  profile_step.jl  runtests.jl
tests/: benchmark_nb_gc.jl  benchmark_pola.jl  benchmark_step.jl  profile_step.jl  test_calibration_output.jl
(+187 files in other folders)
