[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AlphaPEM"
version = "1.4.0"
description = "1D+1D dynamic simulator of PEM fuel cells for embedded applications."
readme = "README.md"
license = { file = "LICENSE" }
authors = [ { name = "Raphaël Gass", email = "gassraphael@proton.me" } ]
requires-python = ">=3.10"
keywords = ["fuel-cell", "PEMFC", "simulation", "finite-volume"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "colorama~=0.4",
    "matplotlib~=3.10",
    "numpy~=2.2",
    "pygad~=3.5",
    "scipy~=1.15",
    "ttkthemes~=3.3",
]

[project.urls]
Homepage = "https://gassraphael.github.io/AlphaPEM/"
Repository = "https://github.com/gassraphael/AlphaPEM"

[project.scripts]
AlphaPEM = "alphapem.application.run_simulation:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["env*", "docs*", "site*", "__pycache__", "results*", "calibration/results*", "*.tests", "tests*"]
